    new option specifies the behaviour of the ROM launcher when exiting
    a ROM (always exit to launcher, or only when the launcher was actually
    used).  This setting can now be changed in the GUI.

  * Several updates to the internal properties database:
      - 'Juno First' ROMs now use an AtariVox/SaveKey when possible
      - 'Astroblast' ROMs now use the paddles by default

  * Changed key-combo for enabling TIA objects and collisions to be
    toggled on and off with the Alt-period and Shift-Alt-period
    respectively (instead of having two separate keys to turn them on
    and off).

  * When working on the commandline, relative filenames are now
    correctly handled (current working directory is used).

  * The Windows 98/ME/2000 builds have been discontinued, due to code and
    features that are only available on Windows XP/SP3 and later.

  * Updated included PNG library to latest stable version.

-Have fun!


3.6 to 3.6.1: (March 30, 2012)

  * Extended FA2 bankswitch scheme to handle 28K ROMs (in addition to
    the previously supported 24K ROMs).


3.5.5 to 3.6: (March 16, 2012)

  * Added support for 2600-daptor II device, including native support
    for 7800 controllers, BoosterGrip and Keypad controllers.  Special
    thanks go to Tom Hafner for a complimentary test sample of this
    device, and also for donating a BoosterGrip controller.

  * Added ability to dynamically swap the port order of Stelladaptor/
    2600-daptor devices with the 'Control-1' key combo (useful if you
    have only one 2600-daptor and want to use it as a left port
    normally, but as a right port for Star Raiders, etc).

  * Added CompuMate bankswitching/controller support to the emulation
    core; the Spectravideo CompuMate ROMs (NTSC and PAL) now work.
    Frequently used keys on the CompuMate are directly mapped to your
    keyboard (ie, Func-Space for backspace is mapped to Backspace, etc).